--- a/css/styles.css
+++ b/css/styles.css
@@ -324,7 +324,7 @@ Waypoints
 .delay-1s { animation-delay: 1s; -webkit-animation-delay: 1s; }
 .wp3 {
 	background: url('../img/FBSLogo.png') no-repeat center center;
-	background-position: 200px 10px;
+	/* background-position: 200px 10px; */
 	height: 100%;
 }
 /* ==========================================================================
