--- a/css/styles.css
+++ b/css/styles.css
@@ -349,3 +349,33 @@ FBS Logo
 .light-box p a{
 	color:#8c9398;
 }
+
+.flow{
+	padding: 15px;
+	width: 100%;
+	height: 200px;
+	overflow: scroll;
+	/* border: 0.1em solid rgb(240, 239, 239); */
+	
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+	background: rgb(240, 239, 239);
+	border-radius: 40%;
+  }
+
+  .clients{
+	  display: none;
+  }
+
+  div .sc-htoDjs .dBBynO{
+	opacity: 0.5;
+  }
+
+  .sc-gzVnrw .dyHQoQ{
+	  opacity: 0.5;
+  }
